# stm32f429i-eval

./: Cargo.toml  LICENSE-0BSD.txt  README.md  memory.x  openocd.cfg
.cargo/: config.toml
examples/: leds.rs  ltdc-screen.rs  touch.rs
src/: led.rs  lib.rs  screen.rs  sdram.rs  stmpe811.rs
