[package]
edition = "2021"
authors = ["Fredrik Jagenheim <jagenheim@gmail.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F429I EVAL microcontroller board"
documentation = "https://docs.rs/crate/stm32f429i-eval"
keywords = [
    "arm",
    "cortex-m",
    "template",
    "bsp",
    "stm32",
    "stm32f429"
]
license = "0BSD"
name = "stm32f429i-eval"
repository = "https://github.com/jagenheim/stm32f429i-eval"
version = "0.1.0"
readme = "README.md"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.7"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["defmt", "stm32f429"]
path="../stm32f4xx-hal"
#version = "0.17.1"

[dev-dependencies]
nb = "1.1"

[profile.dev]
panic="abort"
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"

